# Velocity

./: .gitignore  .replit  Cargo.toml  README.md  TODO.md  install.sh  lambda  lambda.py  main.py
core/: buffer.py  buffers.py  colors.py  components.py  cursor.py  cursors.py  files.py  mode.py  modes.py  statusbar.py  utils.py  welcome.py
mode/: command.py  insert.py  normal.py
modes/: command.py  insert.py  normal.py
src/: editor.rs  main.rs  terminal.rs  tui.rs
src/core/: buffer.rs  editor.rs  mod.rs
src/terminal/: mod.rs  screen.rs  tui.rs
src/terminal/components/: mod.rs  statusbar.rs  welcome.rs
src/tui/: mod.rs  ui.rs  utils.rs
src/tui/components/: mod.rs  statusbar.rs  welcome.rs
