[package]
name = "velocity"
version = "0.1.0"
authors = ["Madeline <maddie@spyhoodle.me>"]
edition = "2021"
description = "Next generation hackable text editor for nerds"
homepage = "https://github.com/SpyHoodle/velocity"
repository = "https://github.com/SpyHoodle/velocity"
readme = "README.md"
include = ["src/*.rs", "Cargo.toml"]
categories = ["text-editors"]
keywords = ["text-editor", "editor", "terminal", "tui"]

[dependencies]
crossterm = "0.25"
